# AppControleFinanceiro

./: .gitignore  pyproject.toml  run.py
webapp/: __init__.py  models.py
webapp/blueprints/dashboard/: __init__.py  routes.py
webapp/blueprints/dashboard/templates/: dashboard.html
webapp/blueprints/home/: __init__.py  routes.py
webapp/blueprints/home/templates/: home.html
webapp/blueprints/transacoes/: __init__.py  routes.py
webapp/blueprints/transacoes/templates/: adicionar_transacao.html  categorias.html  movimentacoes.html
webapp/templates/: base.html  header.html
